--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     </head>
     <body>
 
-        <p>This is a beginning</p>
+        <p>This is a beginning.</p>
         <p>Of a very short poem</p>
+        <p>Who knows how long it will be?</p>
   
 
     </body>
