--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
 
-        <p>This is a beginning</p>
+        <p>This is a beginning,</p>
         <p>Of a very short poem</p>
   
 
