--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         <p>This is a beginning,</p>
         <p>Of a very short poem</p>
         <p>Who knows how long it will be?</p>
-        <p>Not very long, probably</p>
+        <p>Not very long, probably.</p>
+        <p>Yes, that's right, very short.</p>
   
 
     </body>
